# ti-assistant-rs

./: Makefile  Readme.md  Roadmap.md  docker-compose.yml
backend/demo_game_creator/: Cargo.toml
backend/demo_game_creator/src/: main.rs
backend/game/: Cargo.toml
backend/game/src/: enum_map.rs  game_options.rs  lib.rs
backend/game/src/data/: mod.rs
backend/game/src/data/common/: color.rs  expansions.rs  faction.rs  mod.rs
backend/game/src/data/components/: action_card.rs  frontier_card.rs  leaders.rs  mod.rs  phase.rs  planet.rs  planet_attachment.rs  relic.rs  strategy_card.rs  system.rs  tech.rs
backend/game/src/data/components/agenda/: mod.rs
backend/game/src/data/components/agenda/description/: ArmedForcesStandardization  ArmsReduction  ColonialRedistribution  ConventionsOfWar  CovertLegislation  EconomicEquality  FleetRegulations  IxthianArtifact  MinisterOfAntiques  MinisterOfPeace  MinisterOfPolicy  MinisterOfSciences  MiscountDisclosed  PoliticalCensure  ProphecyOfIxth  PublicizeWeaponSchematics  RegulatedConscription  RepresentativeGovernmentPOK  ResearchTeamPropulsion  SwordsToPlowshares  TheCrownOfEmphidia  TheCrownOfThalnos
backend/game/src/data/components/leaders/: agent.rs  commander.rs  hero.rs
backend/game/src/data/components/leaders/description/: 2RAM  Acamar  AiroShirAur  BerekarBerekon  BrotherMilor  BrotherMilorCxIII  CarthOfGoldenSands  CleverCleverSsruu  Conservator Procyon  DannelOfTheTenth  DarktalonTreilla  DartandTai  Emissary Taivra  FieldMarshallMercer  G'hom Sek'kus  GilatheSilvertongue  Jace X. 4th Air Legion  Letani Ospha  LetaniMiasmiala  Maban  NavarchFeng  NekroMalleon  RinTheMastersLegacy  SaiSeravus  ShvalHarbinger  Ul the Progenitor  UnitDsgnFlayesh  ViscountUnlenn  Xxekir Grom  Z'eu
backend/game/src/data/components/objectives/: mod.rs  public.rs  secret.rs
backend/game/src/gameplay/: agenda.rs  error.rs  event.rs  game.rs  game_event_handler.rs  game_settings.rs  game_state.rs  map.rs  mod.rs  player.rs  score.rs  status.rs
backend/map_render/: Cargo.toml  Readme.md
backend/map_render/src/: main.rs  system_planets.rs  tile.rs
backend/milty/: Cargo.toml  example_milty_response.json
backend/milty/src/: lib.rs  milty_response.rs
backend/server/: Cargo.toml  build.rs
backend/server/src/: gc.rs  insert_demo_games.rs  lobby.rs  main.rs
backend/websocket/: Cargo.toml
backend/websocket/src/: lib.rs  websocket_client.rs  ws_message.rs
server/: .env.example  Cargo.toml
server/migrations/2023-11-02-214911_persistent-game-state/: down.sql  up.sql
server/migrations/2023-11-16-204221_readable_game_ids/: down.sql  up.sql
server/src/: db.rs  example_game.rs  game.rs  game_options.rs  gc.rs  lobby.rs  main.rs  player.rs  round.rs  schema.rs  websocket_client.rs  ws_message.rs
server/src/api/: game.rs  game_options.rs  mod.rs
server/src/data/: mod.rs  options.rs
server/src/data/common/: color.rs  expansions.rs  faction.rs  mod.rs
server/src/data/components/: action_card.rs  mod.rs  phase.rs  planet.rs  public_objectives.rs  secret_objectives.rs  strategy_card.rs  system.rs  tech.rs
server/src/data/components/agenda/description/: ExecutiveSanctions  GalacticCrisisPact  HolyPlanetOfIxth  MinisterOfCommerce  PublicExecution  SearchWarrant
server/src/data/components/objectives/: mod.rs  public.rs  secret.rs
server/src/gameplay/: event.rs  game.rs  game_event_handler.rs  game_state.rs  mod.rs  player.rs  score.rs
server/src/phases/: mod.rs
ti-assistant-rs/: .env.example  Cargo.toml  README.md
ti-assistant-rs/libs/db/: Cargo.toml
ti-assistant-rs/libs/db/migrations/2023-11-02-214911_persistent-game-state/: down.sql
ti-assistant-rs/libs/db/src/: db.rs  error.rs  game_id.rs  lib.rs  queries.rs  schema.rs
ti-assistant-rs/libs/game_data/: Cargo.toml
ti-assistant-rs/libs/game_data/src/: enum_map.rs  error.rs  game_id.rs  game_options.rs  lib.rs
ti-assistant-rs/libs/game_data/src/actions/: event.rs  mod.rs  strategic.rs
ti-assistant-rs/libs/game_data/src/common/: color.rs  expansions.rs  faction.rs  game_settings.rs  map.rs  milty_data.rs  player_id.rs
ti-assistant-rs/libs/game_data/src/components/: action_card.rs  frontier_card.rs  leaders.rs  mod.rs  phase.rs  planet.rs  planet_attachment.rs  strategy_card.rs  system.rs  tech.rs
ti-assistant-rs/libs/game_data/src/components/agenda/: mod.rs
ti-assistant-rs/libs/game_data/src/components/agenda/description/: AntiIntellectualRevolution  ArchivedSecret  ArticlesOfWar  ChecksAndBalances  ClandestineOperations  ClassifiedDocumentLeaks  CommitteeFormation  CompensatedDisarmament  DemilitarizedZone  EnforcedTravelBan  HomelandDefenseAct  ImperialArbiter  IncentiveProgram  JudicialAbolishment  MinisterOfExploration  MinisterOfIndustry  MinisterOfWar  Mutiny  NewConstitution  NexusSovereignty  RearmamentAgreement  RepresentativeGovernmentTI4  ResearchTeamCybernetic  ResearchTeamWarfare  ShardOfTheThrone  UnconventionalMeasures  WormholeReconstruction
ti-assistant-rs/libs/game_data/src/components/leaders/: agent.rs  commander.rs  hero.rs
ti-assistant-rs/libs/game_data/src/components/leaders/description/: AhkSylSiven  ArtunoTheBetrayer  BrotherOmar  BrotherOmarCxIII  CaptainMendosa  ClaireGibson  (+28 more)
ti-assistant-rs/libs/game_data/src/components/objectives/: mod.rs  public.rs  secret.rs
ti-assistant-rs/libs/game_data/src/components/relic/: mod.rs
ti-assistant-rs/libs/game_data/src/state/: agenda.rs  game_state.rs  mod.rs  player.rs  score.rs  status.rs
ti-assistant-rs/libs/game_logic/: Cargo.toml
ti-assistant-rs/libs/game_logic/src/: game_options.rs  lib.rs
ti-assistant-rs/libs/game_logic/src/gameplay/: agenda.rs  color_assignment.rs  error.rs  game.rs  game_event_handler.rs  game_state.rs  mod.rs  player.rs  status.rs
ti-assistant-rs/libs/map_render/: Readme.md
ti-assistant-rs/libs/map_render/src/: main.rs  system_planets.rs  tile.rs
ti-assistant-rs/libs/milty/: Cargo.toml
ti-assistant-rs/libs/milty/src/: error.rs  faction_parser.rs  lib.rs  milty_response.rs
ti-assistant-rs/libs/websocket/src/: websocket_client.rs  ws_message.rs
(+312 files in other folders)
