[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
eyre = "0.6.8"
strum_macros = "0.25"
strum = "0.25"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
