[package]
name = "ti-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
eyre = "0.6.8"
strum_macros = "0.25"
strum = "0.25"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
clap = { version = "4.4.7", features = ["derive", "env"] }
diesel = { version = "2.1.3", features = ["serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
bytemuck = "1.14.0"
dotenvy = "0.15.7"
cron = "0.12.0"
color-eyre = "0.6.2"
chrono = { version = "0.4.31", features = ["serde"] }
