[package]
name = "ti_helper_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
strum = "0.25"
strum_macros = "0.25"
eyre = "0.6.8"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
ts-rs = "8.1.0"
