[package]
name = "ti_helper_map_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.8"
log = "0.4.20"
wasm-bindgen = "0.2.92"

[dependencies.ti_helper_game]
path = "../game"
