[package]
name = "ti_helper_milty"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
html-escape = "0.2.13"
log = "0.4.22"
reqwest = { version = "0.12.8", default_features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.ti_helper_game_data]
path = "../game_data"
