[package]
name = "ti_helper_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
futures = "0.3.29"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20.1"
log = "0.4.20"

[dependencies.ti_helper_game]
path = "../game"

# Only for gameId :/
[dependencies.ti_helper_db]
path = "../db"
