[package]
name = "ti_helper_db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["serde_json", "chrono"] }
diesel-async = { version = "0.4.1", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
