[package]
name = "ti_helper_game_data"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
ts-rs = "8.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1"
